# uefi-rootkit

./: .gitmodules  CMakeLists.txt  mingw32.cmake  setup.sh
Conf/: target.txt
src/DxeRootkitPkg/: DxeRootkitPkg.dec  DxeRootkitPkg.dsc
src/DxeRootkitPkg/PayloadDxe/: Payload.inf
src/DxeRootkitPkg/RootkitDxe/: Rootkit.inf  rootkit.c
src/DxeRootkitPkg/payload/: payload.inf
src/DxeRootkitPkg/rootkit/: rootkit.c  rootkit.inf
src/UefiExamplePkg/: UefiExamplePkg.dsc
src/firmware-injector/: CMakeLists.txt  main.cpp
src/firmware-patcher/: CMakeLists.txt  firmware-patcher.pro  main.cpp
src/payload/: CMakeLists.txt  main.cpp
